--- a/style.css
+++ b/style.css
@@ -22,6 +22,41 @@ ul {
 	list-style: none;
 }
 
+.subtext {
+	color: #e09873;
+	letter-spacing: 2px;
+}
+
+.projectBox {
+	width: 50%;
+	float: left;
+	margin-top: 10px;
+	margin-left: 20px;
+	border-top: 1px solid #222222;
+	padding-top: 10px;
+}
+
+.projectBox img {
+	border-right: 10px solid #e09873;
+	padding-right: 10px;
+	float: left;
+}
+
+.projectLink {
+	margin-left: 120px;
+}
+
+.projectLink a {
+	color: white;
+	font-size: 1.3em;
+	font-weight: bold;
+	letter-spacing: 2px;
+}
+
+.projectLink a:hover {
+	color: #e09873;
+}
+
 #firstName {
 	text-indent: none;
 	color: white;
@@ -39,50 +74,7 @@ ul {
 	font-family: Garamond;
 }
 
-.subtext {
-	color: #e09873;
-	letter-spacing: 2px;
-}
-
 #content {
-}
-
-#container1 {
-	border: solid 1px #222222;
-	padding: 60px 30px;
-}
-
-#container2 {
-	margin-top: -22px;
-	margin-left: 20px;
-	background-color: #222222;
-	padding: 15px;
-	width: 50%;
-}
-
-#imageBox {
-	float: right;
-	margin-top: -40px;
-	border: solid 1px #e09873;
-	padding: 15px;
-}
-
-#credBox1 {
-	float: left;
-	width: 40%;
-}
-
-#credBox2 {
-	float: right;
-	width: 60%;
-}
-
-#cred {
-	width: 50%;
-}
-
-#cred p {
-	padding: 40px;
 }
 
 #navBar {
@@ -107,4 +99,54 @@ ul {
 
 #navBar a:hover {
 	color: #e09873;
+}
+
+#nameCont {
+	border: solid 1px #222222;
+	padding: 60px 30px;
+}
+
+#titleCont {
+	margin-top: -22px;
+	margin-left: 20px;
+	background-color: #222222;
+	padding: 15px;
+	width: 50%;
+}
+
+#imageBox {
+	float: right;
+	margin-right: 100px;
+	margin-top: -40px;
+	border: solid 1px #e09873;
+	padding: 15px;
+}
+
+#credBoxColLeft {
+	float: left;
+	width: 40%;
+}
+
+#credBoxColRight {
+	float: right;
+	width: 60%;
+}
+
+#cred {
+	width: 50%;
+}
+
+#cred p {
+	padding: 40px;
+}
+
+#contacts {
+	margin-top: 20px;
+}
+
+#contacts a {
+	float: left;
+	font-size: 1.5em;
+	color: white;
+	margin-left: 20px;
 }
