--- a/style.css
+++ b/style.css
@@ -1,34 +1,83 @@
 
-#content {
-	background-color: #222222;
-	color: #888888;
+@media screen and (max-width: 500px) {
+	#firstName {
+		font-size: 2.5em;
+	}
+	
+	#lastName {
+		margin-top: -15px;
+		font-size: 3.5em;
+	}
+	
+	#content {
+		background-color: #222222;
+		color: #888888;
+	}
+
+	body {
+		background-color: #222222;
+	}
+
+	#title {
+		font-family: Garamond, serif;
+		color: white;
+	}
+
+	#portrait {
+		border: solid 2px #e09873;
+		padding: 10px;
+		text-align: center;
+	}
+
+	#navbar ul li {
+		padding: 10px 40px;
+		text-align: center;
+		letter-spacing: 2px;
+	}
+
+	#pixelArea {
+		padding-left: 0px;
+	}
 }
 
-body {
-	background-color: #222222;
-}
+@media screen and (min-width: 501px) {
 
-#title {
-	font-family: Garamond, serif;
-	color: white;
-}
+	#firstName {
+		font-size: 3em;
+	}
 
-#lastName {
-	margin-top: -25px;
-}
+	#lastName {
+		margin-top: -35px;
+		font-size: 4.5em;
+	}
+	
+	#content {
+		background-color: #222222;
+		color: #888888;
+	}
 
-#portrait {
-	border: solid 2px #e09873;
-	padding: 10px;
-	text-align: center;
-}
+	body {
+		background-color: #222222;
+	}
 
-#navbar ul li {
-	padding: 10px 40px;
-	text-align: center;
-	letter-spacing: 2px;
-}
+	#title {
+		font-family: Garamond, serif;
+		color: white;
+	}
 
-#pixelArea {
-	padding-left: 0px;
+	#portrait {
+		border: solid 2px #e09873;
+		padding: 10px;
+		text-align: center;
+	}
+
+	#navbar ul li {
+		padding: 10px 40px;
+		text-align: center;
+		letter-spacing: 2px;
+	}
+
+	#pixelArea {
+		padding-left: 0px;
+	}
 }
