--- a/style.css
+++ b/style.css
@@ -1,5 +1,9 @@
+/*
+	Mobile
+**************************************/
 
 @media screen and (max-width: 500px) {
+	
 	#firstName {
 		font-size: 2.2em;
 	}
@@ -8,37 +12,26 @@
 		margin-top: -15px;
 		font-size: 3em;
 	}
-	
-	#content {
-		background-color: #222222;
-		color: #888888;
-	}
 
-	body {
-		background-color: #222222;
-	}
-
-	#title {
-		font-family: Garamond, serif;
-		color: white;
-	}
-
-	#portrait {
-		border: solid 2px #e09873;
-		padding: 10px;
+	a.link {
+		color: #555555;
+		text-decoration: none;
+		font-weight: bold;
 		text-align: center;
+		font-size: 2em;
 	}
-
-	#navbar ul li {
-		padding: 10px 40px;
+	a.link:hover {
+		color: #e09873;
+		text-decoration: none;	
+		font-weight: bold;
 		text-align: center;
-		letter-spacing: 2px;
-	}
-
-	#pixelArea {
-		padding-left: 0px;
+		font-size: 2em;
 	}
 }
+
+/*
+	Desktop
+**************************************/
 
 @media screen and (min-width: 501px) {
 
@@ -50,7 +43,23 @@
 		margin-top: -35px;
 		font-size: 4.5em;
 	}
-	
+
+	a.link {
+		color: #555555;
+		text-decoration: none;
+		font-weight: bold;
+	}
+	a.link:hover {
+		color: #e09873;
+		text-decoration: none;	
+		font-weight: bold;
+	}
+}
+
+/*
+	All other settings
+**************************************/
+
 	#content {
 		background-color: #222222;
 		color: #888888;
@@ -60,6 +69,7 @@
 		background-color: #222222;
 	}
 
+	
 	#title {
 		font-family: Garamond, serif;
 		color: white;
@@ -80,4 +90,3 @@
 	#pixelArea {
 		padding-left: 0px;
 	}
-}
